force-app/main/default/objects/Integration_Execution_Log__c/Integration_Execution_Log__c.object-meta.xml
<CustomObject>
    <description>Historique des exécutions techniques affichées dans Integration Studio.</description>
    <label>Integration Execution Log</label>
    <nameField>
        <displayFormat>IEL-{000000}</displayFormat>
        <label>Integration Execution Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Execution Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>