force-app/main/default/objects/Integration_Execution_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Identifiant commun permettant de suivre une exécution entre plusieurs systèmes.</description>
    <label>Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>