force-app/main/default/objects/Integration_Execution_Log__c/fields/Details_JSON__c.field-meta.xml
<CustomField>
    <fullName>Details_JSON__c</fullName>
    <description>Détails techniques complémentaires sans données sensibles.</description>
    <label>Details JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>