force-app/main/default/objects/Integration_Execution_Log__c/fields/Edge_Id__c.field-meta.xml
<CustomField>
    <fullName>Edge_Id__c</fullName>
    <description>Identifiant de la flèche dans Diagram_JSON__c.</description>
    <label>Edge ID</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>