force-app/main/default/objects/Integration_Execution_Log__c/fields/Integration_Flow__c.field-meta.xml
<CustomField>
    <fullName>Integration_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Flux d’intégration concerné par cette exécution.</description>
    <label>Integration Flow</label>
    <referenceTo>Integration_Flow__c</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>Execution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>